--- a/step-9/README.adoc
+++ b/step-9/README.adoc
@@ -121,3 +121,66 @@ The Markdown preview and editor elements are the following:
 include::src/main/resources/webroot/index.html[tags=markdown]
 ----
 <1> `ng-model` binds the `textarea` content to the `pageMarkdown` property of the controller.
+
+=== Application controller
+
+The `wiki.js` JavaScript starts with an AngularJS module declaration:
+
+[source,javascript,indent=0]
+----
+include::src/main/resources/webroot/wiki.js[tags=module-decl]
+----
+
+The `wikiApp` module has no plugin dependency, and declares a single `WikiController` controller.
+The controller requires dependency injection of the following objects:
+
+* `$scope` to provide DOM scoping to the controller, and
+* `$http` to perform asynchronous HTTP requests to the backend, and
+* `$timeout` to trigger actions after a given delay while staying tied to the AngularJS lifecycle (e.g., to ensure that any state modification triggers view changes, which is not the case when using the https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/setTimeout[classic setTimeout function]).
+
+Controller methods are being tied to the `$scope` object.
+Let us start with 3 simple methods:
+
+[source,javascript,indent=0]
+----
+include::src/main/resources/webroot/wiki.js[tags=new-reload-exists]
+----
+
+Creating a new page consists in initializing controller properties that are attached to the `$scope` object.
+Reloading the pages objects from the backend is a matter of performing a HTTP GET request (note that the `$http` request methods return promises).
+The `pageExists` method is being used to show / hide elements in the interface.
+
+Loading the content of the page is also a matter of performing a HTTP GET request, and updating the preview a DOM manipulation:
+
+[source,javascript,indent=0]
+----
+include::src/main/resources/webroot/wiki.js[tags=load]
+----
+
+The next methods support saving / updating and deleting pages.
+For these operations we used the full `then` promise method with the first argument being called on success, and the second one being called on error.
+We also introduce the `success` and `error` helper methods to display notifications (3 secondes on success, 5 seconds on error):
+
+[source,javascript,indent=0]
+----
+include::src/main/resources/webroot/wiki.js[tags=save-delete-notifications]
+----
+
+initializing the application state and views is done by fetching the pages list, and starting with a blank new page editor:
+
+[source,javascript,indent=0]
+----
+include::src/main/resources/webroot/wiki.js[tags=init]
+----
+
+Finally here is how we perform live rendering of Markdown text:
+
+[source,javascript,indent=0]
+----
+include::src/main/resources/webroot/wiki.js[tags=live-rendering]
+----
+<1> `$scope.$watch` allows being notified of state changes. Here we monitor changes on the `pageMarkdown` property that is bound to the editor `textarea`.
+<2> 300 milliseconds is a _fine_ delay to trigger rendering if nothing has changed in the editor.
+<3> Timeouts are promise, so if the state has changed we cancel the previous one and create a new one. This is how we delay rendering instead of doing it on every keystroke.
+<4> We ask the backend to render the editor text into some HTML, then refresh the preview.
+
