--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= Vert.x guide
+= A gentle guide to asynchronous programming with Eclipse Vert.x for enterprise application developers
 Julien Ponge <julien.ponge@insa-lyon.fr> ; Thomas Segismont <tsegismo@redhat.com> ; Julien Viet <jviet@redhat.com>
 :source-highlighter: highlight.js
 :icons: font
