--- a/README.adoc
+++ b/README.adoc
@@ -38,4 +38,7 @@ include::step-8/README.adoc[]
 :imagesdir: step-9
 include::step-9/README.adoc[]
 
+:imagesdir: outro
+include::outro/README.adoc[]
+
 :leveloffset: -1
