--- a/intro/README.adoc
+++ b/intro/README.adoc
@@ -15,7 +15,7 @@ Along the way you will learn to:
 5. Integrating with third-party services exposing a HTTP/JSON web API.
 6. Exposing a HTTP/JSON web API.
 7. Securing and controlling access using HTTPS, user authentication for web browser sessions and JWT tokens for third-party client applications.
-8. Refactoring some code to use reactive programing with the widely used RxJava library and its Vert.x integration.
+8. Refactoring some code to use reactive programming with the widely used RxJava library and its Vert.x integration.
 9. Client-side programming with AngularJS.
 10. Real-time web programming using the unified Vert.x event bus integration over SockJS.
 
@@ -29,19 +29,19 @@ Vert.x was initiated in 2012 by Tim Fox.
 
 Vert.x is not a framework but a toolkit: the core library defines the fundamental APIs for writing asynchronous networked applications, and then you can pick the useful modules for your application (e.g., database connection, monitoring, authentication, logging, service discovery, clustering support, etc).
 Vert.x is based on the http://netty.io/[Netty project], a high-performance asynchronous networking library for the JVM.
-Vert.x will let you access the Netty internals _if need be_, but in general you will better benefit from the higher-level APIs that Vert.x provides while not sacrifying performance compared to _raw_ Netty.
+Vert.x will let you access the Netty internals _if need be_, but in general you will better benefit from the higher-level APIs that Vert.x provides while not sacrificing performance compared to _raw_ Netty.
 
 Vert.x does not impose any packaging or build environment.
 Since Vert.x core itself is just a regular Jar library it can be embedded inside applications packaged as a set of Jars, a single Jar with all dependencies, or it can even be deployed inside popular component and application containers.
 
 Because Vert.x was designed for asynchronous communications it can deal with more concurrent network connections with less threads than synchronous APIs such as Java servlets or `java.net` socket classes.
-Vert.x is useful for a large range of applications: high volume message / event processing, microservices, API gateways, HTTP APIs for mobile applications, etc.
+Vert.x is useful for a large range of applications: high volume message / event processing, micro-services, API gateways, HTTP APIs for mobile applications, etc.
 Vert.x and its ecosystem provide all sorts of technical tools for building end-to-end reactive applications.
 
 While it may sound like Vert.x is only useful for demanding applications, the present guide also stresses that Vert.x also works very well for more traditional web applications.
 As we will see, the code will remain relatively easy to comprehend, and should an application need to face a sudden peak in traffic then the code is already written with the essential ingredient for scaling up: _asynchronous processing of events_.
 
-Finally, it is worth mentionning that Vert.x is _polyglot_ as it supports a wide range of popular JVM languages: Java, Groovy, Scala, Kotlin, JavaScript, Ruby and Ceylon.
+Finally, it is worth mentioning that Vert.x is _polyglot_ as it supports a wide range of popular JVM languages: Java, Groovy, Scala, Kotlin, JavaScript, Ruby and Ceylon.
 The goal when supporting a language in Vert.x is not just to provide access to the APIs, but also to make sure that the language-specific APIs are idiomatic in each target language.
 It is well-possible to develop different technical parts of an application with different JVM languages and the Vert.x APIs.
 
@@ -60,7 +60,7 @@ Event-loops are typical in asynchronous programming models:
 
 image::images/event-loop.png[]
 
-Each event shall be processed in a _reasonnable_ amount of time to not block the event loop.
+Each event shall be processed in a _reasonable_ amount of time to not block the event loop.
 This means that _blocking_ operations shall not be performed while executed on the event loop, exactly like processing events in a graphical user interface like Java/Swing (e.g., freezing the interface by doing a slow network request).
 As we will see later in this guide, Vert.x offers mechanisms to deal with blocking operations outside of the event loop.
 In any case Vert.x emits warnings in logs when the event loop has been processing an event for _too long_, which is also configurable to match application-specific requirements (e.g., when working on slower IoT ARM boards).
@@ -73,10 +73,10 @@ A verticle can be passed some configuration (e.g., credentials, network addresse
 
 image::images/verticle-threading-config.png[]
 
-Incoming network data is being received from acceptor threads and then are then passed as events to the corresponding verticles.
-When a verticle opens a network server and is deployed more than once, then the events are being distributed to the verticle instances in a round-robin fashion which is very useful for maximising CPU usage with lots of concurrent networked requests.
+Incoming network data is being received from accepting threads and then are then passed as events to the corresponding verticles.
+When a verticle opens a network server and is deployed more than once, then the events are being distributed to the verticle instances in a round-robin fashion which is very useful for maximizing CPU usage with lots of concurrent networked requests.
 
-Finally, verticles have a simple start / stop lifecycle, and verticles can deploy other verticles as the remainder of the guide will show.
+Finally, verticles have a simple start / stop life-cycle, and verticles can deploy other verticles as the remainder of the guide will show.
 
 === Event bus 
 
@@ -87,7 +87,7 @@ The event bus allows the HTTP verticle to send a request to the database verticl
 
 image::images/event-bus.png[]
 
-The event-bus allows passing any kind of data, altough JSON is the preferred exchange format since it allows verticles written in different languages to communicate, and more generally JSON is a popular general-purpose semi-structured data marshalling text format.
+The event-bus allows passing any kind of data, although JSON is the preferred exchange format since it allows verticles written in different languages to communicate, and more generally JSON is a popular general-purpose semi-structured data marshaling text format.
 
 Message can be sent to _destinations_ which are free-form strings.
 The event bus supports the following communication patterns:
